--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "test.js",
   "scripts": {
     "build": "rollup -c",
-    "start": "node dist/test.js"
+    "start": "node dist/test.js",
+    "test": "tsx test.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,13 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^22.12.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
     "rollup": "^4.32.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0"
   },
