--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@eslint/js": "^9.19.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.12.0",
+    "csv-parser": "^3.2.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
+    "fs": "0.0.1-security",
     "globals": "^15.14.0",
+    "path": "^0.12.7",
     "prettier": "3.4.2",
     "rollup": "^4.32.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "typescript-eslint": "^8.22.0",
+    "ws": "^8.18.0"
   },
   "dependencies": {
+    "@types/ws": "^8.5.14",
     "tslib": "^2.8.1"
   }
 }
