--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "test_battle",
-  "version": "1.0.0",
-  "main": "test.js",
-  "scripts": {
-    "build": "rollup -c",
-    "start": "node dist/test.js",
-    "test": "tsx test.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "description": "",
+  "scripts": {
+    "build": "npm run build:core && npm run build:server",
+    "build:core": "tsc -b tsconfig.core.json",
+    "build:server": "tsc -b tsconfig.server.json",
+    "build:client": "vite build",
+    "test": "tsc -b tsconfig.test.json && node dist/test/main.js",
+    "dev:editor": "vite --config vite.editor.config.ts",
+    "dev:client": "vite --config vite.client.config.ts"
+  },
+  "dependencies": {
+    "vue": "^3.5.13",
+    "js-yaml": "^4.1.0",
+    "pure-rand": "^6.1.0"
+  },
   "devDependencies": {
+    "@types/ws": "^8.5.14",
+    "tslib": "^2.8.1",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "vite": "^6.1.0",
+    "vue-tsc": "^2.2.0",
     "@eslint/js": "^9.19.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.12.0",
@@ -28,13 +39,5 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
     "ws": "^8.18.0"
-  },
-  "dependencies": {
-    "@types/ws": "^8.5.14",
-    "@types/yup": "^0.32.0",
-    "js-yaml": "^4.1.0",
-    "pure-rand": "^6.1.0",
-    "tslib": "^2.8.1",
-    "yup": "^1.6.1"
   }
 }
