--- a/tsconfig.console.json
+++ b/tsconfig.console.json
@@ -3,12 +3,13 @@
   "references": [{ "path": "./tsconfig.core.json" }],
   "compilerOptions": {
     "composite": true,
-    "lib": ["ESNext"],
+    "moduleDetection": "force",
     "module": "ESNext",
     "types": ["node"],
-    "moduleResolution": "nodenext",
-    "outDir": "./dist/server",
-    "sourceMap": true
+    "resolveJsonModule": true,
+    "allowJs": false,
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
-  "include": ["test.ts", "src/consoleUI.ts"]
+  "include": ["test.ts", "src/console/**/*"]
 }
