--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
     "dev:client": "vite --config vite.client.config.ts"
   },
   "dependencies": {
-    "vue": "^3.5.13",
+    "concurrently": "^9.1.2",
+    "electron": "^34.1.1",
+    "electron-builder": "^25.1.8",
     "js-yaml": "^4.1.0",
-    "pure-rand": "^6.1.0"
+    "pure-rand": "^6.1.0",
+    "vue": "^3.5.13",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.14",
-    "tslib": "^2.8.1",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
-    "vite": "^6.1.0",
-    "vue-tsc": "^2.2.0",
     "@eslint/js": "^9.19.0",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.12.0",
+    "@types/ws": "^8.5.14",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
     "csv-parser": "^3.2.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
@@ -35,9 +36,12 @@
     "path": "^0.12.7",
     "prettier": "3.4.2",
     "rollup": "^4.32.1",
+    "tslib": "^2.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0",
+    "vue-tsc": "^2.2.0",
     "ws": "^8.18.0"
   }
 }
