--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:client": "vite --config vite.client.config.ts"
   },
   "dependencies": {
+    "chevrotain": "^11.0.3",
     "concurrently": "^9.1.2",
     "electron": "^34.1.1",
     "electron-builder": "^25.1.8",
