--- a/tsconfig.core.json
+++ b/tsconfig.core.json
@@ -6,7 +6,8 @@
     "module": "ESNext",
     "outDir": "./dist/core",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "strictPropertyInitialization": false
   },
-  "include": ["src/core/**/*", "src/effectBuilder/**/*"]
+  "include": ["src/core/**/*", "src/effectBuilder/**/*", "test2.ts"]
 }
