--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "types": [],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "test2.ts"],
   "exclude": ["node_modules"],
   "references": [
     { "path": "./tsconfig.core.json" },
