--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,11 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "test2.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
   "references": [
     { "path": "./tsconfig.core.json" },
     { "path": "./tsconfig.console.json" },
     { "path": "./tsconfig.client.json" },
-    { "path": "./tsconfig.server.json" },
-    { "path": "./tsconfig.test.json" }
+    { "path": "./tsconfig.server.json" }
   ]
 }
