--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-yaml": "^4.1.0",
     "prando": "^6.0.1",
     "pure-rand": "^6.1.0",
+    "ts-to-zod": "^3.15.0",
     "vue": "^3.5.13",
     "zod": "^3.24.1"
   },
