--- a/package.json
+++ b/package.json
@@ -27,18 +27,22 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.12.0",
     "@types/ws": "^8.5.14",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "babel-jest": "^29.7.0",
     "csv-parser": "^3.2.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "fs": "0.0.1-security",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "path": "^0.12.7",
     "prettier": "3.4.2",
     "rollup": "^4.32.1",
+    "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
