--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     { "path": "./tsconfig.core.json" },
     { "path": "./tsconfig.console.json" },
     { "path": "./tsconfig.client.json" },
-    { "path": "./tsconfig.server.json" }
+    { "path": "./tsconfig.server.json" },
+    { "path": "./tsconfig.test.json" }
   ]
 }
