--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "chevrotain": "^11.0.3",
+    "commander": "^13.1.0",
     "concurrently": "^9.1.2",
     "electron": "^34.1.1",
     "electron-builder": "^25.1.8",
@@ -23,6 +24,7 @@
     "pure-rand": "^6.1.0",
     "ts-to-zod": "^3.15.0",
     "vue": "^3.5.13",
+    "yaml": "^2.7.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
