--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:client": "vite build",
     "test": "tsc -b tsconfig.test.json && node dist/test/main.js",
     "dev:editor": "vite --config vite.editor.config.ts",
-    "dev:client": "vite --config vite.client.config.ts"
+    "dev:client": "vite --config vite.client.config.ts",
+    "generate:schema": "tsx script/schema.ts",
+    "validate": "tsx script/schema.ts --validate-only"
   },
   "dependencies": {
     "chevrotain": "^11.0.3",
@@ -25,7 +27,8 @@
     "ts-to-zod": "^3.15.0",
     "vue": "^3.5.13",
     "yaml": "^2.7.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
