--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "composite": true,
     "lib": ["ESNext"],
-    "module": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "types": ["node"],
     "outDir": "./dist/server",
     "sourceMap": true
