--- a/tsconfig.core.json
+++ b/tsconfig.core.json
@@ -9,5 +9,12 @@
     "declarationMap": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src/core/**/*", "src/effectBuilder/**/*", "src/effectDSL/**/*", "src/daraRespository/**/*", "src/schema"]
+  "include": [
+    "src/core/**/*",
+    "src/effectBuilder/**/*",
+    "src/effectDSL/**/*",
+    "src/daraRespository/**/*",
+    "src/schema/**/*",
+    "src/parser/**/*"
+  ]
 }
