--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "cli": "tsx ./src/console/cli.ts"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
     "chevrotain": "^11.0.3",
     "commander": "^13.1.0",
     "concurrently": "^9.1.2",
     "electron": "^34.1.1",
     "electron-builder": "^25.1.8",
+    "express": "^4.21.2",
     "js-yaml": "^4.1.0",
     "nanoid": "^5.0.9",
     "prando": "^6.0.1",
     "pure-rand": "^6.1.0",
+    "socket.io": "^4.8.1",
     "ts-to-zod": "^3.15.0",
     "vue": "^3.5.13",
     "yaml": "^2.7.0",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.12.0",
     "@types/ws": "^8.5.14",
@@ -55,7 +59,6 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
-    "vue-tsc": "^2.2.0",
-    "ws": "^8.18.0"
+    "vue-tsc": "^2.2.0"
   }
 }
