--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,13 +2,21 @@
   "extends": "./tsconfig.json",
   "references": [{ "path": "./tsconfig.core.json" }],
   "compilerOptions": {
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "types": ["bun-types"],
     "composite": true,
-    "lib": ["ESNext"],
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
-    "types": ["node"],
-    "outDir": "./dist/server",
-    "sourceMap": true
+
+    /* 类型检查强化 */
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
+    /* 调试优化 */
+    "sourceMap": true,
+    "inlineSources": true
   },
   "include": ["src/server/**/*"]
 }
