--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "chevrotain": "^11.0.3",
     "commander": "^13.1.0",
     "concurrently": "^9.1.2",
-    "electron": "^34.1.1",
-    "electron-builder": "^25.1.8",
     "express": "^4.21.2",
     "js-yaml": "^4.1.0",
     "nanoid": "^5.0.9",
@@ -44,6 +42,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "babel-jest": "^29.7.0",
+    "bun-types": "^1.2.2",
     "csv-parser": "^3.2.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
