--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:client": "vite --config vite.client.config.ts",
     "generate:schema": "tsx script/schema.ts",
     "validate": "tsx script/schema.ts --validate-only",
-    "cli": "tsx ./src/console/cli.ts"
+    "cli": "tsx ./bin/cli.ts"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.24.0",
@@ -23,9 +23,11 @@
     "express": "^4.21.2",
     "js-yaml": "^4.1.0",
     "nanoid": "^5.0.9",
+    "pino": "^9.6.0",
     "prando": "^6.0.1",
     "pure-rand": "^6.1.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "ts-to-zod": "^3.15.0",
     "vue": "^3.5.13",
     "yaml": "^2.7.0",
