--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "ts-to-zod": "^3.15.0",
-    "vue": "^3.5.13",
     "yaml": "^2.7.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
@@ -41,8 +40,6 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.12.0",
     "@types/ws": "^8.5.14",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
     "babel-jest": "^29.7.0",
     "bun-types": "^1.2.2",
     "csv-parser": "^3.2.0",
@@ -58,8 +55,6 @@
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0",
-    "vue-tsc": "^2.2.0"
+    "typescript-eslint": "^8.22.0"
   }
 }
