--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,13 +1,11 @@
 {
   "extends": "./tsconfig.json",
-  "references": [{ "path": "./tsconfig.core.json" }],
   "compilerOptions": {
     "composite": true,
     "lib": ["DOM", "ESNext"],
     "module": "ESNext",
     "jsx": "preserve",
-    "jsxImportSource": "vue",
-    "types": ["vite/client"],
+    "types": [],
     "outDir": "./dist/client"
   },
   "include": ["packages/client/**/*", "packages/protocol"]
