--- a/tsconfig.console.json
+++ b/tsconfig.console.json
@@ -1,10 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "references": [
-    { "path": "./tsconfig.core.json" },
-    { "path": "./tsconfig.client.json" },
-    { "path": "./tsconfig.server.json" }
-  ],
+  "references": [{ "path": "./tsconfig.client.json" }, { "path": "./tsconfig.server.json" }],
   "compilerOptions": {
     "composite": true,
     "moduleDetection": "force",
