--- a/packages/effectBuilder/tsconfig.json
+++ b/packages/effectBuilder/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext"],
     "module": "ESNext",
-    "outDir": "../../dist/battle",
+    "outDir": "../../dist/effectBuilder",
     "declaration": true,
     "declarationMap": true,
     "strictPropertyInitialization": false,
