--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@test-battle/schema",
+  "name": "console",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@test-battle/const": "workspace:^",
-    "nanoid": "^5.0.9",
-    "zod": "^3.24.1"
+    "@test-battle/battle": "workspace:^",
+    "@test-battle/const": "workspace:^"
+  },
+  "devDependencies": {
+    "@types/node": "^22.12.0"
   }
 }
