--- a/packages/effectDSL/package.json
+++ b/packages/effectDSL/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@test-battle/schema",
+  "name": "@test-battle/effectdsl",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@test-battle/battle": "workspace:^",
     "@test-battle/const": "workspace:^",
-    "nanoid": "^5.0.9",
+    "@test-battle/data-repository": "workspace:^",
+    "@test-battle/effect-builder": "workspace:^",
     "zod": "^3.24.1"
   }
 }
