--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@test-battle/schema",
+  "name": "parser",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@test-battle/battle": "workspace:^",
     "@test-battle/const": "workspace:^",
+    "@test-battle/data-repository": "workspace:^",
+    "@test-battle/effect-builder": "workspace:^",
+    "@test-battle/effectdsl": "workspace:^",
+    "@test-battle/schema": "workspace:^",
     "nanoid": "^5.0.9",
     "zod": "^3.24.1"
   }
