--- a/packages/protocol/tsconfig.json
+++ b/packages/protocol/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "bundler",
-    "outDir": "../../dist/effectBuilder",
+    "outDir": "../../dist/protocol",
     "declaration": true,
     "declarationMap": true,
     "strictPropertyInitialization": false,
