--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "@test-battle/client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "socket.io-client": "^4.8.1",
+    "zod": "^3.24.1",
+    "@test-battle/const": "workspace:^",
+    "@test-battle/schema": "workspace:^",
+    "@test-battle/protocol": "workspace:^",
+    "nanoid": "^5.0.9"
+  }
 }
