--- a/packages/consoleClient/package.json
+++ b/packages/consoleClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "console-client",
+  "name": "@test-battle/console-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
