--- a/packages/consoleClient/package.json
+++ b/packages/consoleClient/package.json
@@ -2,7 +2,6 @@
   "name": "@test-battle/console-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +11,9 @@
   "dependencies": {
     "@test-battle/client": "workspace:^",
     "@test-battle/const": "workspace:^",
+    "@test-battle/data-repository": "workspace:^",
     "@test-battle/schema": "workspace:^",
-    "@test-battle/data-repository": "workspace:^"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.12.0"
