--- a/packages/effectDSL/package.json
+++ b/packages/effectDSL/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@test-battle/effectdsl",
+  "name": "@test-battle/effect-dsl",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
