--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -2,7 +2,6 @@
   "name": "@test-battle/parser",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +13,7 @@
     "@test-battle/const": "workspace:^",
     "@test-battle/data-repository": "workspace:^",
     "@test-battle/effect-builder": "workspace:^",
-    "@test-battle/effectdsl": "workspace:^",
+    "@test-battle/effect-dsl": "workspace:^",
     "@test-battle/schema": "workspace:^",
     "nanoid": "^5.0.9",
     "zod": "^3.24.1"
