--- a/packages/battle/package.json
+++ b/packages/battle/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@test-battle/battle",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
