--- a/packages/battle/package.json
+++ b/packages/battle/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "prando": "^6.0.1",
     "@test-battle/const": "workspace:*"
