--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "socket.io-client": "^4.8.1",
     "zod": "^3.24.1",
