--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -7,7 +7,7 @@
     "generate": "tsx script/schema.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "yuuinih",
   "license": "MIT",
   "dependencies": {
     "@test-battle/const": "workspace:^",
