--- a/packages/battle/package.json
+++ b/packages/battle/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "yuuinih",
   "license": "MIT",
   "dependencies": {
     "prando": "^6.0.1",
