--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "yuuinih",
   "license": "MIT",
   "dependencies": {
     "socket.io-client": "^4.8.1",
