--- a/packages/effectDSL/package.json
+++ b/packages/effectDSL/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "yuuinih",
   "license": "MIT",
   "dependencies": {
     "@test-battle/battle": "workspace:^",
