--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "express": "^4.21.2",
     "socket.io": "^4.8.1",
     "yaml": "^2.7.0",
-    "zod": "^3.24.1",
-    "zod-to-json-schema": "^3.24.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
