--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -16,6 +16,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.12.0"
+    "@types/node": "^22.12.0",
+    "zod-to-json-schema": "^3.24.1"
   }
 }
