--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -5,11 +5,13 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "outDir": "../../dist/schema",
+    "verbatimModuleSyntax": true,
     "declaration": true,
     "declarationMap": true,
     "strictPropertyInitialization": false,
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*"]
+  "include": ["./*"],
+  "exclude": ["./node_modules"]
 }
