--- a/packages/battle/tsconfig.json
+++ b/packages/battle/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "bundler",
+    "verbatimModuleSyntax": true,
     "outDir": "../../dist/battle",
     "declaration": true,
     "declarationMap": true,
@@ -13,5 +14,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*"]
+  "include": ["./*"],
+  "exclude": ["./node_modules"]
 }
