--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -5,10 +5,12 @@
     "module": "ESNext",
     "target": "ESNext",
     "outDir": "../../dist/console",
+    "verbatimModuleSyntax": true,
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "types": ["node"]
   },
-  "include": ["./*"]
+  "include": ["./*"],
+  "exclude": ["./node_modules"]
 }
