--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bun-types": "^1.2.2",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-vue": "^9.32.0",
     "jest": "^29.7.0",
     "prettier": "3.5.1",
     "ts-jest": "^29.2.5",
