--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -21,7 +21,8 @@
     "element-plus": "^2.9.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
