--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -15,16 +15,21 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@test-battle/client": "workspace:^",
     "@test-battle/const": "workspace:^",
+    "@test-battle/protocol": "workspace:^",
     "@test-battle/schema": "workspace:^",
     "element-plus": "^2.9.4",
+    "nanoid": "^5.0.9",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vuedraggable": "^2.24.3",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
+    "@rollup/plugin-yaml": "^4.1.2",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -39,6 +44,8 @@
     "oxlint": "^0.15.10",
     "prettier": "^3.5.1",
     "typescript": "~5.7.3",
+    "unplugin-auto-import": "^19.1.0",
+    "unplugin-vue-components": "^28.4.0",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.2"
