--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -24,8 +24,8 @@
     "nanoid": "^5.0.9",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.0",
-    "vuedraggable": "^2.24.3",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
