--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -23,6 +23,7 @@
     "element-plus": "^2.9.4",
     "nanoid": "^5.0.9",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.0",
@@ -32,6 +33,7 @@
     "@rollup/plugin-yaml": "^4.1.2",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.4",
+    "@types/yaml": "^1.9.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
